--- a/TODO
+++ b/TODO
@@ -32,7 +32,7 @@ Actually insert the choose statement into the document.  Currently, the chosen s
 When the user demonstrates a value, we set the value of the variable (in the debug session) to that of the first valid expression.  The expressions might generate different values, so this might not be the best thing to do.
 If the user saves a document with a choose statement and then executes it, the debug event will rewrite the call to remove the expressions with the wrong values, but the debugger will immediately step into the choose implementation with the old/bad arguments, where the assertion will fail.
 We don't handle generics well due to erasure (although we no longer crash).  See Parse and RandomWriter examples.
-We need to timeout execution of methods when we're testing candidate expressions.  We disallow explicit recursion, but a method could infinite loop or recurse.
+Our evaluation timeout does not currently interrupt things stuck in loops.  Although I don't think the JVM can do better than this....
 When demonstrating values, we do not allow implicit conversions like int->double (e.g., must type 5.0 and not 5 for Intro.hypotenuse).
 I think our evaluations do change memory.  We could re-launch a new debugger, I think with ILaunchConfiguration.launch().
 Improve method blacklist.  Also, it should work for subclasses of the given type, not just that exact type.
